--- a/package.json
+++ b/package.json
@@ -30,20 +30,26 @@
     "ember-cli-htmlbars": "^3.0.0",
     "ember-cli-htmlbars-inline-precompile": "^1.0.3",
     "ember-cli-inject-live-reload": "^1.8.2",
+    "ember-cli-sass": "^8.0.1",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-tailwind": "^0.6.3",
     "ember-cli-uglify": "^2.1.0",
+    "ember-concurrency": "^0.8.25",
     "ember-data": "~3.5.0",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.1.0",
     "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-modal-dialog": "^3.0.0-beta.3",
     "ember-qunit": "^3.4.1",
     "ember-resolver": "^5.0.1",
     "ember-source": "~3.5.1",
     "ember-welcome-page": "^3.2.0",
     "eslint-plugin-ember": "^5.2.0",
+    "liquid-fire": "^0.29.5",
+    "liquid-tether": "^2.0.7",
     "loader.js": "^4.7.0",
-    "qunit-dom": "^0.8.0"
+    "qunit-dom": "^0.8.0",
+    "sass": "^1.15.2"
   },
   "engines": {
     "node": "6.* || 8.* || >= 10.*"
