--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ember-cli-sri": "^2.1.1",
     "ember-cli-tailwind": "^0.6.3",
     "ember-cli-uglify": "^2.1.0",
+    "ember-composable-helpers": "^2.1.0",
     "ember-concurrency": "^0.8.25",
     "ember-data": "~3.5.0",
     "ember-export-application-global": "^2.0.0",
